--- a/index.html
+++ b/index.html
@@ -1,21 +1,68 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <title>GmKurucuShop</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>GmKurucuShop</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>GmKurucuShop</h1>
+  <header><h1>GmKurucuShop</h1></header>
 
-    <div class="gallery">
-        <div class="item">
-            <a href="https://www.itemsatis.com/roblox/zo-samurai-venom-katana-4221609.html" target="_blank">
-                <div class="item-content">
-                    <p>Roblox Venom Katana</p>
-                </div>
-            </a>
-        </div>
+  <main class="gallery" role="list">
+    <div class="item item1" role="listitem">
+      <a href="https://www.itemsatis.com/roblox/zo-samurai-venom-katana-4221609.html" target="_blank" rel="noopener noreferrer">
+        <div class="item-content"><p>Roblox Venom Katana</p></div>
+      </a>
     </div>
+
+    <div class="item item2" role="listitem">
+      <a href="https://www.itemsatis.com/roblox/roblox-jailbreak-orion-4032397.html" target="_blank" rel="noopener noreferrer">
+        <div class="item-content"><p>Roblox Jailbreak Orion</p></div>
+      </a>
+    </div>
+
+    <div class="item item3" role="listitem">
+      <a href="https://www.itemsatis.com/roblox/roblox-jailbreak-iceborn-4032387.html" target="_blank" rel="noopener noreferrer">
+        <div class="item-content"><p>Roblox Jailbreak Iceborn</p></div>
+      </a>
+    </div>
+
+    <div class="item item4" role="listitem">
+      <a href="https://www.itemsatis.com/car-parking-multiplayer/drive-zone-tornado-50-level-araba-2953572.html" target="_blank" rel="noopener noreferrer">
+        <div class="item-content"><p>Drive Zone Tornado</p></div>
+      </a>
+    </div>
+
+    <div class="item item5" role="listitem">
+      <a href="https://www.itemsatis.com/roblox/blade-ball-aetherial-azure-reckoner-4211835.html" target="_blank" rel="noopener noreferrer">
+        <div class="item-content"><p>Blade Ball Aetherial Azure Reckoner</p></div>
+      </a>
+    </div>
+
+    <div class="item item6" role="listitem">
+      <a href="https://www.itemsatis.com/roblox/stand-awakening-shadow-dio-3048593.html" target="_blank" rel="noopener noreferrer">
+        <div class="item-content"><p>Stand Awakening Shadow Dio</p></div>
+      </a>
+    </div>
+
+    <div class="item item7" role="listitem">
+      <a href="https://www.itemsatis.com/roblox/stand-awakening-dio-s-the-world-3868157.html" target="_blank" rel="noopener noreferrer">
+        <div class="item-content"><p>Stand Awakening DIO's The World</p></div>
+      </a>
+    </div>
+
+    <div class="item item8" role="listitem">
+      <a href="https://www.itemsatis.com/roblox/stand-awakening-sans-3026443.html" target="_blank" rel="noopener noreferrer">
+        <div class="item-content"><p>Stand Awakening Sans</p></div>
+      </a>
+    </div>
+
+    <div class="item item9" role="listitem">
+      <a href="https://www.itemsatis.com/roblox/stand-awakening-sonic-exe-3868153.html" target="_blank" rel="noopener noreferrer">
+        <div class="item-content"><p>Stand Awakening Sonic EXE</p></div>
+      </a>
+    </div>
+  </main>
 </body>
 </html>
