--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="tr">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>GmKurucuShop</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Site Başlığı -->
+  <title>Gm Kurucu Shop | Oyun Ürünleri</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="apple-touch-icon" href="favicon-32x32.png">
+
+  <!-- Stil Dosyası -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header><h1>GmKurucuShop</h1></header>
+  <header>
+    <h1>Gm Kurucu Shop</h1>
+    <p>Roblox ve diğer oyun ürünleri</p>
+  </header>
 
   <main class="gallery" role="list">
     <div class="item item1" role="listitem">
@@ -64,5 +75,9 @@
       </a>
     </div>
   </main>
+
+  <footer>
+    <p>&copy; 2025 Gm Kurucu Shop. Tüm hakları saklıdır.</p>
+  </footer>
 </body>
 </html>
